fixed spacing between tracks and fixed mentor FAQ

--- a/src/views/Home/Tracks/index.scss
+++ b/src/views/Home/Tracks/index.scss
@@ -74,3 +74,7 @@
     width: 100%;
   }
 }
+
+.tracks--space-between {
+  margin-bottom: 40px;
+}
